modules/gdscript/tests/scripts/parser/errors/struct_no_var.gd
struct Test:
    oops

func test():
    pass
